--- a/index.html
+++ b/index.html
@@ -3,7 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta lang="en" />
     <title>Personal page</title>
+
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+
+  <body>
+    <header class="menu">
+      <p>About</p>
+      <p>Portfolios</p>
+      <p>Contact</p>
+    </header>
+
+    <section class="namePage">
+      <img
+        src="/logoBeta.png"
+        alt="Here you can find a beautiful logo of my page, shown as violin key and saxophone combinded in one element."
+      />
+
+      <div class="nameFlexBox">
+        <h1 class="myName">Pawel</h1>
+        <h1 class="mySurname">Wozniak</h1>
+      </div>
+
+      <div class="professionFlexBox">
+        <p>Web developer</p>
+        <p class="prof">Professional musician</p>
+      </div>
+    </section>
+    <section class="aboutPage"></section>
+    <section class="portfolioPage"></section>
+    <section class="skillsPage"></section>
+    <section class="hobbyPage"></section>
+    <section class="contactPage"></section>
+  </body>
 </html>
