--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
       />
 
       <div class="nameFlexBox">
-        <h1 class="myName">Pawel</h1>
-        <h1 class="mySurname">Wozniak</h1>
+        <img class="myNameImg" src="./myName.png" alt="" />
+        <!-- <h1 class="myName">Pawel</h1>
+        <h1 class="mySurname">Wozniak</h1> -->
       </div>
 
       <div class="professionFlexBox">
@@ -46,7 +47,7 @@
       </div>
 
       <div class="aboutFlexBox">
-        <img src="szopini.png" alt="Elegancki szop grający na saksofonie" />
+        <img src="szopini2.png" alt="Elegancki szop grający na saksofonie" />
         <p>
           A passionate saxophonist, an engineer by profession.
           <b>Perfectionist</b>. Experience as <b>web/frontend</b> developer and
