--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
     </header>
 
     <section class="namePage">
+      <div class="logoHere">
       <img
-        src="/logoBeta.png"
+        src="/logoCirc.png"
         alt="Here you can find a beautiful logo of my page, shown as violin key and saxophone combinded in one element."
       />
-
+    </div>
       <div class="nameFlexBox">
         <img class="myNameImg" src="./myName.png" alt="" />
         <!-- <h1 class="myName">Pawel</h1>
@@ -70,98 +71,114 @@
     <section class="skillsPage">
       <h1 class="sectionName">My skills</h1>
 
-      <!-- <ul>
-        <li>HTML/CSS/BOOTSTRAP</li>
-        <li>JavaScript/JQuery</li>
-        <li>React</li>
-        <li>Python: pandas/librosa/sqlite3</li>
-        <li>SQL</li>
-        <li>Git</li>
-        <li>Availability/Commitment</li>
-      </ul> -->
+      <!-- ////////////////////////////////////////////////////////////// -->
+      <div class="tag-list">
+        <div class="loop-slider" style="--duration:59260ms; --direction:normal;">
+          <div class="inner">
+            <div class="tag"><span>#</span> WebDev</div>
+            <div class="tag"><span>#</span> HTML</div>
+            <div class="tag"><span>#</span> CSS</div>
+            <div class="tag"><span>#</span> BOOTSTRAP</div>
+            <!-- duplicated content -->
+            <div class="tag"><span>#</span> WebDev</div>
+            <div class="tag"><span>#</span> HTML</div>
+            <div class="tag"><span>#</span> CSS</div>
+            <div class="tag"><span>#</span> BOOTSTRAP</div>
+            <!-- duplicated content -->
+            <div class="tag"><span>#</span> WebDev</div>
+            <div class="tag"><span>#</span> HTML</div>
+            <div class="tag"><span>#</span> CSS</div>
+            <div class="tag"><span>#</span> BOOTSTRAP</div>
+          </div>
+        </div>
+        <div class="loop-slider" style="--duration:59260ms; --direction:reverse;">
+          <div class="inner">
+            <div class="tag"><span>#</span> JavaScript</div>
+            <div class="tag"><span>#</span> JQuery</div>
+            <div class="tag"><span>#</span> React</div>
+            <div class="tag"><span>#</span> JavaScript</div>
+            <div class="tag"><span>#</span> JQuery</div>
+            <div class="tag"><span>#</span> React</div>
+            <!-- duplicated content -->
+            <div class="tag"><span>#</span> JavaScript</div>
+            <div class="tag"><span>#</span> JQuery</div>
+            <div class="tag"><span>#</span> React</div>
+            <div class="tag"><span>#</span> JavaScript</div>
+            <div class="tag"><span>#</span> JQuery</div>
+            <div class="tag"><span>#</span> React</div>
+            <!-- duplicated content -->
+            <div class="tag"><span>#</span> JavaScript</div>
+            <div class="tag"><span>#</span> JQuery</div>
+            <div class="tag"><span>#</span> React</div>
+            <div class="tag"><span>#</span> JavaScript</div>
+            <div class="tag"><span>#</span> JQuery</div>
+            <div class="tag"><span>#</span> React</div>
+          </div>
+        </div>
 
-
-<!-- ////////////////////////////////////////////////////////////// -->
-<div class="tag-list">
-  <div class="loop-slider" style="--duration:15951ms; --direction:normal;">
-    <div class="inner">
-      <div class="tag"><span>#</span> JavaScript</div>
-      <div class="tag"><span>#</span> webdev</div>
-      <div class="tag"><span>#</span> Typescript</div>
-      <div class="tag"><span>#</span> Next.js</div>
-      <div class="tag"><span>#</span> UI/UX</div>
-      <!-- duplicated content -->
-      <div class="tag"><span>#</span> JavaScript</div>
-      <div class="tag"><span>#</span> webdev</div>
-      <div class="tag"><span>#</span> Typescript</div>
-      <div class="tag"><span>#</span> Next.js</div>
-      <div class="tag"><span>#</span> UI/UX</div>
-    </div>
-  </div>
-  <div class="loop-slider" style="--duration:19260ms; --direction:reverse;">
-    <div class="inner">
-      <div class="tag"><span>#</span> webdev</div>
-      <div class="tag"><span>#</span> Gatsby</div>
-      <div class="tag"><span>#</span> JavaScript</div>
-      <div class="tag"><span>#</span> Tailwind</div>
-      <div class="tag"><span>#</span> Typescript</div>
-      <!-- duplicated content -->
-      <div class="tag"><span>#</span> webdev</div>
-      <div class="tag"><span>#</span> Gatsby</div>
-      <div class="tag"><span>#</span> JavaScript</div>
-      <div class="tag"><span>#</span> Tailwind</div>
-      <div class="tag"><span>#</span> Typescript</div>
-    </div>
-  </div>
-  <div class="loop-slider" style="--duration:10449ms; --direction:normal;">
-    <div class="inner">
-      <div class="tag"><span>#</span> animation</div>
-      <div class="tag"><span>#</span> Tailwind</div>
-      <div class="tag"><span>#</span> React</div>
-      <div class="tag"><span>#</span> SVG</div>
-      <div class="tag"><span>#</span> HTML</div>
-      <!-- duplicated content -->
-      <div class="tag"><span>#</span> animation</div>
-      <div class="tag"><span>#</span> Tailwind</div>
-      <div class="tag"><span>#</span> React</div>
-      <div class="tag"><span>#</span> SVG</div>
-      <div class="tag"><span>#</span> HTML</div>
-    </div>
-  </div>
-  <div class="loop-slider" style="--duration:16638ms; --direction:reverse;">
-    <div class="inner">
-      <div class="tag"><span>#</span> Gatsby</div>
-      <div class="tag"><span>#</span> HTML</div>
-      <div class="tag"><span>#</span> CSS</div>
-      <div class="tag"><span>#</span> React</div>
-      <div class="tag"><span>#</span> Next.js</div>
-      <!-- duplicated content -->
-      <div class="tag"><span>#</span> Gatsby</div>
-      <div class="tag"><span>#</span> HTML</div>
-      <div class="tag"><span>#</span> CSS</div>
-      <div class="tag"><span>#</span> React</div>
-      <div class="tag"><span>#</span> Next.js</div>
-    </div>
-  </div>
-  <div class="loop-slider" style="--duration:15936ms; --direction:normal;">
-    <div class="inner">
-      <div class="tag"><span>#</span> Next.js</div>
-      <div class="tag"><span>#</span> React</div>
-      <div class="tag"><span>#</span> webdev</div>
-      <div class="tag"><span>#</span> Typescript</div>
-      <div class="tag"><span>#</span> Gatsby</div>
-      <!-- duplicated content -->
-      <div class="tag"><span>#</span> Next.js</div>
-      <div class="tag"><span>#</span> React</div>
-      <div class="tag"><span>#</span> webdev</div>
-      <div class="tag"><span>#</span> Typescript</div>
-      <div class="tag"><span>#</span> Gatsby</div>
-    </div>
-  </div>
-  <div class="fade"></div>
-</div>
-</div>
-<!-- ////////////////////////////////////////////////////////////// -->
+        <div class="loop-slider" style="--duration:59260ms; --direction:normal;">
+          <div class="inner">
+            <div class="tag"><span>#</span> PYTHON</div>
+            <div class="tag"><span>#</span> Pandas</div>
+            <div class="tag"><span>#</span> Librosa</div>
+            <div class="tag"><span>#</span> Sqlite3</div>
+            <!-- duplicated content -->
+            <div class="tag"><span>#</span> PYTHON</div>
+            <div class="tag"><span>#</span> Pandas</div>
+            <div class="tag"><span>#</span> Librosa</div>
+            <div class="tag"><span>#</span> Sqlite3</div>
+            <!-- duplicated content -->
+            <div class="tag"><span>#</span> PYTHON</div>
+            <div class="tag"><span>#</span> Pandas</div>
+            <div class="tag"><span>#</span> Librosa</div>
+            <div class="tag"><span>#</span> Sqlite3</div>
+          </div>
+        </div>
+        <div class="loop-slider" style="--duration:59260ms; --direction:reverse;">
+          <div class="inner">
+            <div class="tag"><span>#</span> SQL</div>
+            <div class="tag"><span>#</span> GIT</div>
+            <div class="tag"><span>#</span> Github</div>
+            <div class="tag"><span>#</span> Latex</div>
+            <!-- duplicated content -->
+            <div class="tag"><span>#</span> SQL</div>
+            <div class="tag"><span>#</span> GIT</div>
+            <div class="tag"><span>#</span> Github</div>
+            <div class="tag"><span>#</span> Latex</div>
+            <!-- duplicated content -->
+            <div class="tag"><span>#</span> SQL</div>
+            <div class="tag"><span>#</span> GIT</div>
+            <div class="tag"><span>#</span> Github</div>
+            <div class="tag"><span>#</span> Latex</div>
+            <!-- duplicated content -->
+            <div class="tag"><span>#</span> SQL</div>
+            <div class="tag"><span>#</span> GIT</div>
+            <div class="tag"><span>#</span> Github</div>
+            <div class="tag"><span>#</span> Latex</div>
+            <!-- duplicated content -->
+            <div class="tag"><span>#</span> SQL</div>
+            <div class="tag"><span>#</span> GIT</div>
+            <div class="tag"><span>#</span> Github</div>
+            <div class="tag"><span>#</span> Latex</div>
+          </div>
+        </div>
+        <div class="loop-slider" style="--duration:59260ms; --direction:normal;">
+          <div class="inner">
+            <div class="tag"><span>#</span> Availability</div>
+            <div class="tag"><span>#</span> Commitment</div>
+            <div class="tag"><span>#</span> Availability</div>
+            <div class="tag"><span>#</span> Commitment</div>
+            <!-- duplicated content -->
+            <div class="tag"><span>#</span> Availability</div>
+            <div class="tag"><span>#</span> Commitment</div>
+            <div class="tag"><span>#</span> Availability</div>
+            <div class="tag"><span>#</span> Commitment</div>
+          </div>
+        </div>
+        <div class="fade"></div>
+      </div>
+      </div>
+      <!-- ////////////////////////////////////////////////////////////// -->
 
 
     </section>
