--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
 
       <div class="aboutFlexBox">
-        <img src="szopini2.png" alt="Elegancki szop grający na saksofonie" />
+        <img src="szopini.png" alt="Elegancki szop grający na saksofonie" />
 
         <p class="cursor typewriter-animation">
           A passionate saxophonist, an engineer by profession.
