--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
     </section>
     <section class="portfolioPage" id="portfolioSection">
       <h1 class="sectionName titleRight">Portfolios</h1>
+
+
+      <div class="newBeginging">
+        <img src="./Rectangle.png" alt="My beautiful saxophone site">
+      </div>
+
+
     </section>
     <section class="skillsPage">
       <h1 class="sectionName">My skills</h1>
@@ -197,14 +204,14 @@
       <div class="constactDescription">
         <h2>If you liked my web or you wanna contact me ...</h2>
       </div>
-      <h2 class="hCenter">here you can find me</h2>
+      
       <div class="imgContainer">
-        <img src="./Linkedin.png" alt="" />
+        <a href="" class="icon"><img class="logoImg" src="./Linkedin.png" alt="" /></a>
         <img src="./Instagram.png" alt="" />
         <img src="./Mail.png" alt="" />
         <img src="./Github.png" alt="" />
       </div>
-
+      <h2 class="hCenter">here you can find me</h2>
       <div class="cvSection">
         <h1>Still need my CV?</h1>
         <a href=""><h1>CV - linked</h1></a>
