--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
       href="https://fonts.googleapis.com/css2?family=Golos+Text:wght@400..900&display=swap"
       rel="stylesheet"
     />
+    <script defer src="app.js"></script>
   </head>
 
   <body class="finisher-header">
     <header class="menu">
       <a class="btn-7" href="#aboutSection"><p>About</p></a>
-      <a class="btn-7" href="#portfolioSection"><p>Portfolios</p></a>
+      <a class="btn-7" href="#portfolioSection"><p>Portfolio</p></a>
       <a class="btn-7" href="#contactSection"><p>Contact</p></a>
     </header>
 
@@ -46,7 +47,7 @@
       </div>
     </section>
 
-    <section class="aboutPage" id="aboutSection">
+    <section class="aboutPage hidden" id="aboutSection">
       <div>
         <h1 class="sectionName">Something about</h1>
         <h1 class="HCorrection sectionName">me</h1>
@@ -65,7 +66,7 @@
         </p>
       </div>
     </section>
-    <section class="portfolioPage" id="portfolioSection">
+    <section class="portfolioPage hidden" id="portfolioSection">
       <h1 class="sectionName titleRight">Portfolios</h1>
 
 
@@ -75,7 +76,7 @@
 
 
     </section>
-    <section class="skillsPage">
+    <section class="skillsPage hidden">
       <h1 class="sectionName">My skills</h1>
 
       <!-- ////////////////////////////////////////////////////////////// -->
@@ -189,7 +190,7 @@
 
 
     </section>
-    <section class="hobbyPage">
+    <section class="hobbyPage hidden">
       <h1 class="sectionName titleRight">Hobbies</h1>
       <p class="hobbyDescription">
         Jazz music enthusiast. I started my musical adventure at the age of 7
@@ -206,15 +207,15 @@
       </div>
       
       <div class="imgContainer">
-        <a href="" class="icon"><img class="logoImg" src="./Linkedin.png" alt="" /></a>
-        <img src="./Instagram.png" alt="" />
-        <img src="./Mail.png" alt="" />
-        <img src="./Github.png" alt="" />
+        <a href="https://www.linkedin.com/in/wozniakpawel01/" target="_blank" class="icon"><img class="logoImg" src="./Linkedin.png" alt="" /></a>
+        <a href="https://www.instagram.com/kudlak101/" target="_blank" class="icon"><img src="./Instagram.png" alt="" /></a>
+        <a href="mailto:pawel.wozniak.wp@gmail.com" class="icon"><img src="./Mail.png" alt="" /></a>
+        <a href="https://github.com/Pablo-Saxoo" target="_blank" class="icon"><img src="./Github.png" alt="" /></a>
       </div>
-      <h2 class="hCenter">here you can find me</h2>
-      <div class="cvSection">
+      <!-- <h2 class="hCenter">here you can find me</h2> -->
+      <div class="cvSection hidden">
         <h1>Still need my CV?</h1>
-        <a href=""><h1>CV - linked</h1></a>
+        <a href="./Pawel_Wozniak_CV.pdf" target="_blank"><h1>CV - linked</h1></a>
       </div>
     </section>
 
