New portfolio effects

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
     <section class="namePage">
       <div class="logoHere">
       <img
-        src="/logoCirc.png"
+        src="./public/logoCirc.png"
         alt="Here you can find a beautiful logo of my page, shown as violin key and saxophone combinded in one element."
       />
     </div>
       <div class="nameFlexBox">
-        <img class="myNameImg" src="./myName.png" alt="" />
+        <img class="myNameImg" src="./public/myName.png" alt="" />
         <!-- <h1 class="myName">Pawel</h1>
         <h1 class="mySurname">Wozniak</h1> -->
       </div>
@@ -54,7 +54,7 @@
       </div>
 
       <div class="aboutFlexBox">
-        <img src="szopini.png" alt="Elegancki szop grający na saksofonie" />
+        <img src="./public/szopini.png" alt="Elegancki szop grający na saksofonie" />
 
         <p class="cursor typewriter-animation">
           A passionate saxophonist, an engineer by profession.
@@ -67,11 +67,19 @@
       </div>
     </section>
     <section class="portfolioPage hidden" id="portfolioSection">
-      <h1 class="sectionName titleRight">Portfolios</h1>
+      <h1 class="sectionName titleRight">Portfolio</h1>
 
 
       <div class="newBeginging">
-        <img src="./Rectangle.png" alt="My beautiful saxophone site">
+        <div class="text-overlay"></div>
+        <img src="./public/Rectangle111.png" alt="My beautiful saxophone site">
+        <div class="text-details">
+          <h1>Shop</h1>
+          <p>Shop page for saxophone mouthpieces, contains the 3D symulator of models made in JS and many
+            React features: like filtering products on page or adding comments by users.
+          </p>
+          <img src="./public/RectangleStr.png" alt="">
+        </div>
       </div>
 
 
@@ -196,7 +204,7 @@
         Jazz music enthusiast. I started my musical adventure at the age of 7
         with the piano. I played the clarinet, trumpet and percussion but the
         saxophone became the chosen one. In my free time, I learn new
-        improvisations, read and go to the gym.
+        improvisations, produce new music pieces, tinker in my workshop and go to the gym.
       </p>
     </section>
     <section class="contactPage" id="contactSection">
@@ -207,15 +215,15 @@
       </div>
       
       <div class="imgContainer">
-        <a href="https://www.linkedin.com/in/wozniakpawel01/" target="_blank" class="icon"><img class="logoImg" src="./Linkedin.png" alt="" /></a>
-        <a href="https://www.instagram.com/kudlak101/" target="_blank" class="icon"><img src="./Instagram.png" alt="" /></a>
-        <a href="mailto:pawel.wozniak.wp@gmail.com" class="icon"><img src="./Mail.png" alt="" /></a>
-        <a href="https://github.com/Pablo-Saxoo" target="_blank" class="icon"><img src="./Github.png" alt="" /></a>
+        <a href="https://www.linkedin.com/in/wozniakpawel01/" target="_blank" class="icon"><img class="logoImg" src="./public/Linkedin.png" alt="" /></a>
+        <a href="https://www.instagram.com/kudlak101/" target="_blank" class="icon"><img src="./public/Instagram.png" alt="" /></a>
+        <a href="mailto:pawel.wozniak.wp@gmail.com" class="icon"><img src="./public/Mail.png" alt="" /></a>
+        <a href="https://github.com/Pablo-Saxoo" target="_blank" class="icon"><img src="./public/Github.png" alt="" /></a>
       </div>
       <!-- <h2 class="hCenter">here you can find me</h2> -->
       <div class="cvSection hidden">
         <h1>Still need my CV?</h1>
-        <a href="./Pawel_Wozniak_CV.pdf" target="_blank"><h1>CV - linked</h1></a>
+        <a href="./public/Pawel_Wozniak_CV.pdf" target="_blank"><h1>CV - linked</h1></a>
       </div>
     </section>
 
