--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <p>Shop page for saxophone mouthpieces, contains the 3D symulator of models made in JS and many
             React features: like filtering products on page or adding comments by users.
           </p>
-          <img src="./public/RectangleStr.png" alt="">
+          <a href="https://github.com/Pablo-Saxoo/MouthpiecePage" target="_blank"><img src="./public/RectangleStr.png" alt=""></a>
         </div>
       </div>
 
