--- a/index.html
+++ b/index.html
@@ -83,6 +83,21 @@
         </div>
       </div>
 
+      <!-- /////////////////////////////////////////////////////////////////////////////////////////////// -->
+
+      <div class="newBeginging2">
+        
+        <img src="./public/Portfolios222.png" alt="My beautiful saxophone site">
+        <div class="text-overlay2"></div>
+        <div class="text-details2">
+          <h1>Property possession</h1>
+          <p>Full React based project with a fuctionality implemented. 
+          </p>
+          <a href="https://github.com/Pablo-Saxoo/MouthpiecePage" target="_blank"><img src="./public/Portfolios2.png" alt=""></a>
+        </div>
+      </div>
+
+      <!-- /////////////////////////////////////////////////////////////////////////////////////////////// -->
 
     </section>
     <section class="skillsPage hidden">
